--- a/css/style.css
+++ b/css/style.css
@@ -23,5 +23,25 @@ p{
 }
 .card-title{
     text-align: center;
-    padding-top: 200px;
+    padding-top: 20px;
+}
+.card-body{
+    height: 350px;
+    justify-content: space-between;
+    padding: 20px;
+}
+/* .card-group {
+    margin: 20px;
+    border: 1px solid greenyellow;
+}   */
+.card1{
+    border: 1px solid greenyellow;
+    padding-right: 20px;
+}
+.card3{
+    border: 1px solid greenyellow;
+    padding-right: 20px;
+}
+.card-text{
+    padding: 20px;
 }
