--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,6 @@ p{
     justify-content: space-between;
     padding: 20px;
 }
- /* .card-group {
-    background-color: black;
-}*/
 .col1{
     
     margin-right: 20px;
@@ -43,9 +40,13 @@ p{
     margin-left: 20px;
 }
 .col2{
-   
     padding-right: 20px;
 }
 .card-text{
     padding: 20px;
+}
+.about {
+   background-color: aqua;
+   padding-top: 20px;
+
 }
