--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,11 @@ width: 200px;
 .projects{
     margin-left: 500px;
 }
+.contacts{
+    padding: 20px;
+    padding-left: 20px;
+    /* background: linear-gradient(to right, black 50%, greenyellow 50%); */
+}
+.left{
+    width: 150px;
+}
