--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,24 @@
 *{
     box-sizing: border-box;
 }
-.section1{
+.devimage{
     text-align: center;
     display: flex;
     background-color: black;
     color: aqua;
 }
-p{
+.p1{
     padding: 100px;
     padding-top: 300px;
 
+}
+h1{
+    text-align: center;
+    padding: 50px;
+}
+.aboutme{
+    text-align: center;
+    background-color: aqua;
 }
 .first{
     margin-left: 200px;
@@ -20,6 +28,9 @@ p{
 }
 .image{
     float: right;
+}
+#section2{
+    background-image: url(/images/future.jpeg);
 }
 .card-title{
     text-align: center;
@@ -45,21 +56,25 @@ p{
 .card-text{
     padding: 20px;
 }
-.about {
-   background-color: aqua;
-   padding-top: 20px;
+#section3{
+    background-color: aliceblue;
+
 }
 .right{
 width: 200px;
 }
 .projects{
-    margin-left: 500px;
-}
+    margin-left: 350px; 
+    display: flexbox;
+} 
 .contacts{
     padding: 20px;
     padding-left: 20px;
-    /* background: linear-gradient(to right, black 50%, greenyellow 50%); */
+    
 }
 .left{
-    width: 150px;
+    width: 50px;
+}
+.me{
+    padding-left: 30%;
 }
